syntax = "proto3";

option java_package = "grpc.Radiation";
option java_multiple_files = true;
option java_outer_classname = "RadiationServiceImpl";

service radiationService {
	//rpc StreamRadiation(stream radiationTrack) returns (radiationResponse){}			// client to server streaming
	rpc StreamRadiation(stream newRequestInteger) returns (containsString){}			// client to server streaming

	rpc GetRadiationLevels(radiationLevels) returns (stream levelsStream){}				// server to client streaming
	rpc GetRadiationWarnings(requestRadiationAlerts) returns (stream radiationAlert){}	// server to client streaming

	rpc SendStringClientStreaming(stream containsString) returns (containsString){}
}




// For the IoT Devices
// each IoT device will track radiation levels in the water supply
// and forward the information to the server.
message radiationTrack {
	int32 microsieverts = 1;
}


message radiationResponse {
	int32 received = 1;
}



// For users
// clients request a stream of all radiation levels
// as they happen, arranged by severity.
message radiationLevels {
	int32 clientID = 1;
}

message levelsStream {
	string dangerousRegions = 1;
}



// if a level of radiation rises above a certain threshold
// an alert is sent to the requesting client
message requestRadiationAlerts {
	int32 clientID = 1;
}

message radiationAlert {
	string radiationAlertSet = 1;
}



message containsString {
	string firstString = 1;
}

message newRequestInteger {
   int32 firstInteger = 1;
}

message newResponseInteger {
   int32 firstInteger = 1;
}